[gd_scene load_steps=6 format=2]

[ext_resource path="res://theme/main.tres" type="Theme" id=1]
[ext_resource path="res://theme/fonts/Roboto_Bold_128.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/player_1.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/game.gd" type="Script" id=4]
[ext_resource path="res://scenes/player_2.tscn" type="PackedScene" id=5]

[node name="game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="hider" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )

[node name="show_next" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -318.0
margin_top = -80.5
margin_right = 318.0
margin_bottom = 80.5
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Show Next"
icon_align = 1

[node name="player_1" parent="." instance=ExtResource( 3 )]

[node name="player_2" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="show_next" to="." method="_on_show_next_pressed"]
